--- a/index.html
+++ b/index.html
@@ -171,7 +171,10 @@
 
       const res = await fetch(url, {
         method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
+        headers: {
+          'Content-Type': 'application/json',
+          'Cache-Control': 'no-cache'
+        },
         body: JSON.stringify({ zugParameter: {} })
       });
 
