added meta tags

--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>ÖBB/Westbahn Kilometer- & Fahrtkostenrechner</title>
-  <meta name="description" content="Berechne Entfernung und Fahrtkosten für den Kostenersatz für Mitarbeiter." />
+  <title>Fahrtkostenrechner für Klimaticket-Nutzer:innen</title>
+  <meta property="og:title" content="Fahrtkostenrechner für Klimaticket-Nutzer:innen" />
+  <meta property="og:description" content="Berechne die absetzbare Kilometerleistung für Dienstreisen mit Klimaticket. Steuerlich gültig ab 2025 laut Pauschalregelung." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://fahrtkosten.at" />
   <meta name="author" content="c-leitner" />
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css" />
@@ -48,7 +51,7 @@
 <body class="has-background-white-ter" style="min-height: 100vh; display: flex; flex-direction: column;">
   <section class="section" style="flex: 1;">
     <div class="container">
-      <h1 class="title">ÖBB/Westbahn Kilometer- & Fahrtkostenrechner</h1>
+      <h1 class="title">ÖBB/Westbahn Kilometer- & Fahrtkostenrechner für Klimaticket-Nutzer:innen</h1>
 
       <form onsubmit="event.preventDefault(); calculateRoute();">
         <div class="field">
