--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <body class="has-background-white-ter" style="min-height: 100vh; display: flex; flex-direction: column;">
   <section class="section" style="flex: 1;">
     <div class="container">
-      <h1 class="title">ÖBB/Westbahn Kilometer- & Fahrtkostenrechner für Klimaticket-Nutzer:innen</h1>
+      <h1 class="title">ÖBB/Westbahn Fahrtkostenrechner für Klimaticket-Nutzer:innen</h1>
 
       <form onsubmit="event.preventDefault(); calculateRoute();">
         <div class="field">
