--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
 
       <div id="noticeBox" class="notice content mt-3" style="display: none;">
         <p><strong>Hinweis:</strong> Der Fahrtkostenrechner unterstützt derzeit nur das <strong>Schienennetz der ÖBB-Infrastruktur AG</strong>.</p>
-        <p>Die Kostenberechnung basiert auf dem <a href="https://www.arbeiterkammer.at/beratung/steuerundeinkommen/steuertipps/Dienstreise.html" target="_blank">Dienstreiseratgeber der Arbeiterkammer</a> für das Jahr <strong>2025</strong>.</p>
-        <p><strong>Alle Angaben ohne Gewähr.</strong> Grundlage: <a href="https://wek.oebb.at/" target="_blank">Wegentgeltkalkulator der ÖBB</a>.</p>
+        <p>Die Kostenberechnung basiert auf den Pauschalen des <a href="https://www.arbeiterkammer.at/beratung/steuerundeinkommen/steuertipps/Dienstreise.html" target="_blank">Dienstreiseratgeber der Arbeiterkammer</a> für das Jahr <strong>2025</strong>.</p>
+        <p><strong>Alle Angaben ohne Gewähr.</strong> Grundlage für die Distanzrechnung: <a href="https://wek.oebb.at/" target="_blank">Wegentgeltkalkulator der ÖBB</a>.</p>
       </div>
     </div>
   </section>
